--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br" ng-app="appCursos">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="content-language" content="pt-br" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="content-language" content="pt-br"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
@@ -21,10 +21,15 @@
     <title></title>
 </head>
 <body>
+<!--Include de menu navbar-->
 <div ng-include="'view/navbar.html'"></div>
+
+<!--Container de views-->
 <div class="container-fluid">
     <div ng-view="view"></div>
 </div>
+
+<!--Include de rodape-->
 <div ng-include="'view/footer.html'"></div>
 </body>
 </html>
