--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/controller/navbarController.js"></script>
     <title></title>
 </head>
 <body>
