--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controller/navbarController.js"></script>
+    <script src="js/controller/disciplinaController.js"></script>
+    <script src="js/controller/playerController.js"></script>
     <title></title>
 </head>
 <body>
