--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
 </head>
 <body>
 <!--Include de menu navbar-->
-<div ng-include="'view/navbar.html'"></div>
+<div ng-include="'view/header.html'" ></div>
 
 <!--Container de views-->
-<div class="container-fluid">
+<div class="container">
     <div ng-view="view"></div>
 </div>
 
