--- a/public/index.html
+++ b/public/index.html
@@ -18,20 +18,25 @@
     <script src="bower_components/angular-jwt/dist/angular-jwt.min.js"></script>
     <script src="bower_components/angular-i18n/angular-locale_pt-br.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload-all.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/service/videoAPIService.js"></script>
+    <script src="js/service/autenticacaoAPIService.js"></script>
     <script src="js/controller/headerController.js"></script>
     <script src="js/controller/disciplinaController.js"></script>
     <script src="js/controller/playerController.js"></script>
+    <script src="js/controller/videoController.js"></script>
+    <script src="js/controller/loginController.js"></script>
     <title></title>
 </head>
 <body>
 <!--Include de menu navbar-->
-<div ng-include="'view/header.html'" ></div>
+<div ng-include="'view/header.html'"></div>
 
 <!--Container de views-->
-<div class="container">
-    <div ng-view="view"></div>
+<div>
+    <div ng-view="view" class="container fade"></div>
 </div>
 
 <!--Include de rodape-->
