pasta de videos removido

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <script src="js/controller/playerController.js"></script>
     <script src="js/controller/videoController.js"></script>
     <script src="js/controller/loginController.js"></script>
+    <script src="js/controller/homeController.js"></script>
     <title></title>
 </head>
 <body>
