--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <script src="js/app.js"></script>
     <script src="js/service/videoAPIService.js"></script>
     <script src="js/service/autenticacaoAPIService.js"></script>
+    <script src="js/service/disciplinasAPIService.js"></script>
     <script src="js/controller/headerController.js"></script>
     <script src="js/controller/disciplinaController.js"></script>
     <script src="js/controller/disciplinasController.js"></script>
