erro na listagem de assuntos. N~ao consigo carregar os assundo que possui apenas o id da view

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
     <script src="js/service/videoAPIService.js"></script>
     <script src="js/service/autenticacaoAPIService.js"></script>
     <script src="js/service/disciplinasAPIService.js"></script>
+    <script src="js/service/disciplinaAPIService.js"></script>
     <script src="js/controller/headerController.js"></script>
     <script src="js/controller/disciplinaController.js"></script>
     <script src="js/controller/disciplinasController.js"></script>
